--- a/src/components/Field.css
+++ b/src/components/Field.css
@@ -1,11 +1,37 @@
 
+/*.containerGame{*/
+/*    margin: 0 auto;*/
+/*}*/
+/*.gameGrid{*/
+/*    display: flex;*/
+/*    flex-wrap: nowrap;*/
+/*    text-align: center;*/
+/*    justify-content: center;*/
+/*}*/
+
+/*.cell{*/
+/*    font-size: 4vw;*/
+/*    height: 20vw;*/
+/*    width: 20vw;*/
+/*    display: flex;*/
+/*    justify-content: center;*/
+/*    transition-duration: 0.1s;*/
+/*    transition-timing-function: linear;*/
+/*    background-color: #f1e8ba;*/
+/*}*/
+
 
 .cell{
-    height: 100px;
-    width: 100px;
+  font-size: 30px;
+        height: 20vw;
+        width: 20vw;
+    max-width: 120px;
+    max-height: 120px;
+
     display: inline-block;
     transition-duration: 0.1s;
-    transition-timing-function: linear
+    transition-timing-function: linear;
+    background-color: #282c34;
 }
 
 .cellValue0{
